﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.

1194: correctly add newly created elements to API storage when reading a JOSM style file.

1193: refactoring, save follow GPS state over pause - resume cycles, documentation updates.

1192: add support for editing conditional restrictions in the form tag editor and presets.

1191: bump android version, updated translations, fix pre-Honeycomb use of system clipboard, use normal dialog for progress display, automatically add no https API entry and catch SSL errors better, handle Android 23 permissions better, remove duplicate nodes when merging.

1190: bump android version

1188: fix ordering issues with diffs, fix crash when adding relation to a relation, allow selection of one level of parent relations of relations in UI.

1186: switch to uploading OsmChange diffs, various small bug fixes and improved conflict handling, updated translations.

1185: explicitly set created_by when updating changeset.

1184: fix double relation creation if no further members are added. 

1182: updated default preset and translations.

1180: workaround for issue with onFocusChange listeners being called when fragment views are destroyed, numerous build improvements.
 
1178: changes for building with buildship, export of Notes in OSN format, better file picker for saving and reading files, search button added to "Find" dialog

1176: fix regression caused by 1174, preserve history better when merging nodes and ways.

1174: add support for read-only API (experimental) and bug fixes.

1172: add splash screen on startup and make dimming non-downloaded areas a pref.

1170: add literal substring matching to preset search 

1168: various small internal changes, handle match=”none” the same as “key for building the form display.

1166: updated preset.

1164: force show keyboard and dropdown when adding with name suggestions.

1162: protect against broken NMEA sentences, update presets.
